# LendingProjet_MIAGE_IF

./: CMakeLists.txt  Projet C++.docx
doc/: Note.txt  archi.txt
src/: Account.cpp  Account.h  Borrower.cpp  Borrower.h  Database.cpp  Database.h  Deal.cpp  Deal.h  Facility.cpp  Facility.h  Lender.cpp  Lender.h  Part.cpp  Part.h  Portfolio.cpp  Portfolio.h  main.cpp
src/tests/: sqlExample.cpp  testAccount.cpp  testBorrower.cpp  testDeal.cpp  testFacility.cpp  testJson.cpp  testLender.cpp  testPart.cpp  testPortfolio.cpp  testUtils.cpp
src/utils/: Utils.cpp  Utils.h
